--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -52,16 +52,17 @@
 
     /* ---------- Hero Section ---------- */
     .hero {
-      background: url('https://b.zmtcdn.com/data/pictures/2/19063492/8ed6f7cfeb51474d3c5c71976eeb6d3b.jpg?fit=around|750:500&crop=750:500;*,*') no-repeat center center/cover;
-      height: 90vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      color: #fff;
-      text-align: center;
-      position: relative;
-    }
+  background: url('d03eec05-ef57-448e-a45c-ea0d28db391d.png') no-repeat center center/cover;
+  height: 90vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: #fff;
+  text-align: center;
+  position: relative;
+}
+
     .hero::after {
       content: '';
       position: absolute;
